--- a/scripts/mknmz.in
+++ b/scripts/mknmz.in
@@ -1,7 +1,7 @@
 #! %PERL% -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.in,v 1.19 2000-02-19 10:33:05 satoru Exp $
+# $Id: mknmz.in,v 1.20 2000-02-19 11:26:47 satoru Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
 # Copyright (C) 2000 Namazu Project All rights reserved.
@@ -1184,32 +1184,52 @@ sub add_target ($\@\%) {
 	return; 
     }
 
+    #
+    # Do processing just like find's  --mtime option.
+    #
     if (defined $conf::MTIME) {
-	my ($dev,$ino,$mode,$nlink,$uid,$gid) = lstat($target);
-	if ($conf::MTIME < 0 && (int(-C _) > $conf::MTIME)) {
-	  util::vprint(sprintf(_("Too old:	%s"), $target));
-	    $counts_ref->{'too_old'}++;
-	    return;
-	}
-	if ($conf::MTIME > 0 && (int(-C _) < $conf::MTIME)) {
-	  util::vprint(sprintf(_("Too new:	%s"), $target));
-	    $counts_ref->{'too_new'}++;
+	my $mtime = -M $_;
+	if ($conf::MTIME < 0) {
+	    if (int($mtime) >= - $conf::MTIME) {
+	        util::vprint(sprintf(_("Too old:	%s"), $target));
+	        $counts_ref->{'too_old'}++;
+		return;
+	    }
+	} elsif ($conf::MTIME > 0) {
+	    if ($conf::MTIME =~ /^\+/) {
+		if ((int($mtime) < $conf::MTIME)) {
+		    util::vprint(sprintf(_("Too new:	%s"), $target));
+		    $counts_ref->{'too_new'}++;
+		    return;
+		}
+	    } else {
+		if (int($mtime) != $conf::MTIME) {
+		    if (int($mtime) > $conf::MTIME) {
+		        util::vprint(sprintf(_("Too old:	%s"),$target));
+			$counts_ref->{'too_old'}++;
+		    } else {
+		        util::vprint(sprintf(_("Too new:	%s"),$target));
+			$counts_ref->{'too_new'}++;
+		    }
+		    return;
+		}
+	    }
+	} else {
+	    # $conf::MTIME == 0 ;
 	    return;
 	}
     }
     if ($target =~ m!^.*/(($conf::DENY_FILE)(\.gz|\.Z)?)$!i ) {
-      util::vprint(sprintf(_("Denied:	%s"), $target));
+        util::vprint(sprintf(_("Denied:	%s"), $target));
 	$counts_ref->{'denied'}++; 
 	return;
     }
-    if ($target !~ m!^.*/(($conf::ALLOW_FILE)(\.gz|\.Z|\?.*)?)$!i)
-    {
-      util::vprint(sprintf(_("Not allowed:	%s"), $target));
+    if ($target !~ m!^.*/(($conf::ALLOW_FILE)(\.gz|\.Z|\?.*)?)$!i) {
+        util::vprint(sprintf(_("Not allowed:	%s"), $target));
 	$counts_ref->{'not_allowed'}++; 
 	return;
-    }
-    else{
-      util::vprint(sprintf(_("Targeted:	%s"), $target));
+    } else{
+        util::vprint(sprintf(_("Targeted:	%s"), $target));
 	push @$flists_ref, $target;
     }
 
