--- a/scripts/mknmz.in
+++ b/scripts/mknmz.in
@@ -1,7 +1,7 @@
 #! %PERL% -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.in,v 1.20 2000-02-19 11:26:47 satoru Exp $
+# $Id: mknmz.in,v 1.21 2000-02-19 11:40:13 satoru Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
 # Copyright (C) 2000 Namazu Project All rights reserved.
@@ -870,7 +870,7 @@ sub parse_options ()
 	       '3|allow=s'           => \$conf::ALLOW_FILE,
 	       '4|update=s'          => \$update_index,
 	       '5|mhonarc'           => \$opt_mhonarc,
-	       '6|mtime=s'           => \$conf::MTIME,
+	       '6|mtime=s'           => \$var::Opt{'mtime'},
 	       'A|htacces'           => \$var::Opt{'htaccessexclude'},
 	       'C|show-config'       => \$opt_show_config,
 	       'E|no-edge-symbol'    => \$var::Opt{'noedgesymbol'},
@@ -1187,24 +1187,24 @@ sub add_target ($\@\%) {
     #
     # Do processing just like find's  --mtime option.
     #
-    if (defined $conf::MTIME) {
+    if (defined $var::Opt{'mtime'}) {
 	my $mtime = -M $_;
-	if ($conf::MTIME < 0) {
-	    if (int($mtime) >= - $conf::MTIME) {
+	if ($var::Opt{'mtime'} < 0) {
+	    if (int($mtime) >= - $var::Opt{'mtime'}) {
 	        util::vprint(sprintf(_("Too old:	%s"), $target));
 	        $counts_ref->{'too_old'}++;
 		return;
 	    }
-	} elsif ($conf::MTIME > 0) {
-	    if ($conf::MTIME =~ /^\+/) {
-		if ((int($mtime) < $conf::MTIME)) {
+	} elsif ($var::Opt{'mtime'} > 0) {
+	    if ($var::Opt{'mtime'} =~ /^\+/) {
+		if ((int($mtime) < $var::Opt{'mtime'})) {
 		    util::vprint(sprintf(_("Too new:	%s"), $target));
 		    $counts_ref->{'too_new'}++;
 		    return;
 		}
 	    } else {
-		if (int($mtime) != $conf::MTIME) {
-		    if (int($mtime) > $conf::MTIME) {
+		if (int($mtime) != $var::Opt{'mtime'}) {
+		    if (int($mtime) > $var::Opt{'mtime'}) {
 		        util::vprint(sprintf(_("Too old:	%s"),$target));
 			$counts_ref->{'too_old'}++;
 		    } else {
@@ -1215,7 +1215,7 @@ sub add_target ($\@\%) {
 		}
 	    }
 	} else {
-	    # $conf::MTIME == 0 ;
+	    # $var::Opt{'mtime'} == 0 ;
 	    return;
 	}
     }
