--- a/scripts/mknmz.in
+++ b/scripts/mknmz.in
@@ -1,7 +1,7 @@
 #! %PERL% -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.in,v 1.21 2000-02-19 11:40:13 satoru Exp $
+# $Id: mknmz.in,v 1.22 2000-02-19 12:39:07 satoru Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
 # Copyright (C) 2000 Namazu Project All rights reserved.
@@ -1190,6 +1190,8 @@ sub add_target ($\@\%) {
     if (defined $var::Opt{'mtime'}) {
 	my $mtime = -M $_;
 	if ($var::Opt{'mtime'} < 0) {
+
+	    # This must be `>=' not `>' for consistency with find(1).
 	    if (int($mtime) >= - $var::Opt{'mtime'}) {
 	        util::vprint(sprintf(_("Too old:	%s"), $target));
 	        $counts_ref->{'too_old'}++;
