* doc/Makefile.am (css_DATA): New variable. 	(cssdir): Likewise.
	* doc/ja/Makefile.am (EXTRA_DIST): Remove namazu.css.

	* doc/en/Makefile.am (html_DATA): Remove namazu.css.
:

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -2,5 +2,9 @@
 AUTOMAKE_OPTIONS = 1.4 no-dependencies
 SUBDIRS = en ja
 
+cssdir = $(pkgdatadir)/doc
+
+css_DATA  = namazu.css
+
 ##Bug in automake: Can't use `if MAINTAINER_MODE'
 @MAINTAINER_MODE_TRUE@include $(srcdir)/maintMakefile
