* doc/Makefile.am (EXTRA_DIST): New variable.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -4,7 +4,8 @@ SUBDIRS = en ja
 
 cssdir = $(pkgdatadir)/doc
 
-css_DATA  = namazu.css
+css_DATA   = namazu.css
+EXTRA_DIST = $(css_DATA)
 
 ##Bug in automake: Can't use `if MAINTAINER_MODE'
 @MAINTAINER_MODE_TRUE@include $(srcdir)/maintMakefile
