--- a/namazu.spec.in
+++ b/namazu.spec.in
@@ -33,13 +33,17 @@ Requires: %name = %{PACKAGE_VERSION}
 Libraries and include files of Namazu.
 
 %changelog
+* Sun Feb 20 2000 Ryuji Abe <raeva@t3.rim.or.jp>
+- Install namazu.cgi at /home/httpd/cgi-bin.
+- Fixed typo.
+
 * Sat Feb 19 2000 Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>
 - Change URL.
 
 * Tue Feb 15 2000 Ryuji Abe <raeva@t3.rim.or.jp>
 - Delete package entries elisp and cgi.
 
-* Wed Feb 02 1999 Ryuji Abe <raeva@t3.rim.or.jp>
+* Wed Feb 02 2000 Ryuji Abe <raeva@t3.rim.or.jp>
 - Apapted for namazu-current.
 - Changed group Utilities/Text -> Applications/Text.
 
@@ -84,12 +88,14 @@ if [ ! -f configure ]; then
 CFLAGS="$RPM_OPT_FLAGS" ./autogen.sh \
 	--prefix=%prefix \
 	--sysconfdir=%sysconfdir \
-	--localstatedir=%localstatedir
+	--localstatedir=%localstatedir \
+	--libexecdir=/home/httpd/cgi-bin
 else
 CFLAGS="$RPM_OPT_FLAGS" ./configure \
 	--prefix=%prefix \
 	--sysconfdir=%sysconfdir \
-	--localstatedir=%localstatedir
+	--localstatedir=%localstatedir \
+	--libexecdir=/home/httpd/cgi-bin
 fi
 if [ "$SMP" != "" ]; then
   make -j$SMP "MAKE=make -j$SMP"
@@ -102,6 +108,7 @@ rm -rf $RPM_BUILD_ROOT
 make prefix=$RPM_BUILD_ROOT%{prefix} \
      sysconfdir=$RPM_BUILD_ROOT%{sysconfdir} \
      localstatedir=$RPM_BUILD_ROOT%{localstatedir} \
+     libexecdir=$RPM_BUILD_ROOT/home/httpd/cgi-bin \
      install
 mv $RPM_BUILD_ROOT%{sysconfdir}/namazu/namazurc-sample \
 	$RPM_BUILD_ROOT%{sysconfdir}/namazu/namazurc
@@ -127,7 +134,7 @@ rm -rf $RPM_BUILD_ROOT
 %{prefix}/bin/mailutime
 %{prefix}/bin/nmzgrep
 %{prefix}/lib/libnmz.so.*
-%{prefix}/libexec/namazu.cgi
+/home/httpd/cgi-bin/namazu.cgi
 %{prefix}/man/man1
 %{prefix}/share/locale/*
 %{prefix}/share/namazu/*
