* doc/en/Makefile.am (html_DATA): Remove nmz.html
	* doc/en/nmz.html: Removed temporally.

--- a/doc/en/Makefile.am
+++ b/doc/en/Makefile.am
@@ -1,6 +1,6 @@
 htmldir = $(pkgdatadir)/doc/en
 
-html_DATA = manual.html nmz.html
+html_DATA = manual.html
 EXTRA_DIST = $(html_DATA)
 
 # htmlint <http://openlab.ring.gr.jp/k16/htmllint/htmllint.html>
