--- a/tknamazu/tknamazurc.in
+++ b/tknamazu/tknamazurc.in
@@ -1,7 +1,7 @@
 #
 # Tcl/Tk front-end for Namazu resources file.
 #
-# $Id: tknamazurc.in,v 1.2 2000-02-20 12:41:19 kenzo- Exp $
+# $Id: tknamazurc.in,v 1.3 2000-02-20 13:30:37 kenzo- Exp $
 #
 #
 # このファイルは HOME で規定されるディレクトリもしくは TKNAMAZURC で規定
@@ -13,7 +13,7 @@
 
 
 # Namauz のある所を full path で指定してください。
-NAMAZU			%NAMAZU%
+NAMAZU			@NAMAZU@
 
 # HTML を理解するのと protcol がついた URL を取得する為に lynx を使用します。
 # full path で指定してください。
@@ -83,7 +83,7 @@ NAMAZURC
 INDEXES			@INDEXDIR@
 
 # mknmz のある所を full path で指定してください。
-MKNMZ			%MKNMZ%
+MKNMZ			@MKNMZ@
 
 # mknmz で作られる NMZ.* の出力先を規定したい時に入力してください。
 INDEXOUTPUTDIR	@INDEXDIR@
@@ -95,10 +95,10 @@ TARGETDIR		./
 MKOPTIONS		
 
 # mknmz のコマンドラインオプションを規定してください。
-SMARTBROWSE		
+SMARTBROWSE		1
 
 # mknmz のコマンドラインオプションを規定してください。
-HEADERWIPE		
+HEADERWIPE		ON
 
 # mknmz のコマンドラインオプションを規定してください。
 LOCALSITES		
@@ -125,3 +125,10 @@ BOOKMARKS2		Namazu-Homepage http://www.namazu.org/
 NAMAZUSITES1		localhost http://localhost/cgi-bin/namazu.cgi
 NAMAZUSITES2		Namazu-mailinglist http://ml.namazu.org/cgi-bin/namazu.cgi
 
+SMARTBROWSE
+
+HEADERWIPE
+
+LOCALSITES
+
+THOUGHTFULFIND
