--- a/scripts/mknmz.in
+++ b/scripts/mknmz.in
@@ -1,7 +1,7 @@
 #! %PERL% -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.in,v 1.23 2000-02-20 13:13:05 satoru Exp $
+# $Id: mknmz.in,v 1.24 2000-02-21 08:46:59 satoru Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
 # Copyright (C) 2000 Namazu Project All rights reserved.
@@ -636,7 +636,7 @@ sub load_document ($$$$\%) {
 
 	# Pre code conversion.
 	if ($var::REQUIRE_PRE_CODECONV{$mtype}) {
-	    codeconv::toeuc($contref);
+	    codeconv_document($contref);
 	}
 
 	if (! $var::Supported{$mtype} || 
@@ -665,8 +665,7 @@ sub load_document ($$$$\%) {
 
 	    # Post code conversion.
 	    if ($var::REQUIRE_POST_CODECONV{$mtype}) {
-		print "post codeconv\n";
-	    	codeconv::toeuc($contref);
+		codeconv_document($contref);
 	    }
 
 	    next if ($var::RECURSIVE_ACTIONS{$mtype});
@@ -686,6 +685,12 @@ sub load_document ($$$$\%) {
     $kanji += $$weighted_str =~ tr/\xa1-\xfe/\xa1-\xfe/;
 
     return ($file_size, $text_size, $kanji, $mtype);
+}
+
+sub codeconv_document ($) {
+    my ($contref) = @_;
+    codeconv::toeuc($contref);
+    $$contref =~ tr/\r//d;
 }
 
 sub prep () {
