--- a/scripts/mknmz.in
+++ b/scripts/mknmz.in
@@ -1,7 +1,7 @@
 #! %PERL% -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.in,v 1.26 2000-02-21 10:38:37 satoru Exp $
+# $Id: mknmz.in,v 1.27 2000-02-21 11:16:42 satoru Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
 # Copyright (C) 2000 Namazu Project All rights reserved.
@@ -1232,12 +1232,12 @@ sub add_target ($\@\%) {
     $target =~ m!^.*/([^/]+)$!;
     my $fname = $1;
 
-    if ($fname =~ m!^($conf::DENY_FILE)(\.gz|\.Z|\.bz2)?$!i ) {
+    if ($fname =~ m!^($conf::DENY_FILE)$!i ) {
         util::vprint(sprintf(_("Denied:	%s"), $target));
 	$counts_ref->{'denied'}++; 
 	return;
     }
-    if ($fname !~ m!^($conf::ALLOW_FILE)(\.gz|\.Z|\.bz2)?$!i) {
+    if ($fname !~ m!^($conf::ALLOW_FILE)$!i) {
         util::vprint(sprintf(_("Not allowed:	%s"), $target));
 	$counts_ref->{'not_allowed'}++; 
 	return;
