--- a/scripts/mknmz.in
+++ b/scripts/mknmz.in
@@ -1,7 +1,7 @@
 #! %PERL% -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.in,v 1.27 2000-02-21 11:16:42 satoru Exp $
+# $Id: mknmz.in,v 1.28 2000-02-22 03:44:13 satoru Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
 # Copyright (C) 2000 Namazu Project All rights reserved.
@@ -317,7 +317,7 @@ sub load_filters (@) {
 	die $@ if $@;
 	eval "\$post_codeconv  = ${module}::post_codeconv();";
 	die $@ if $@;
-	eval "\$post_codeconv  = ${module}::add_magic(\$Magic);";
+	eval "${module}::add_magic(\$Magic);";
 	die $@ if $@;
 
 	for my $mt (@mtypes) {
@@ -636,6 +636,7 @@ sub load_document ($$$$\%) {
 
 	# Pre code conversion.
 	if ($var::REQUIRE_PRE_CODECONV{$mtype}) {
+	    util::dprint("pre_codeconv\n");
 	    codeconv_document($contref);
 	}
 
@@ -665,6 +666,7 @@ sub load_document ($$$$\%) {
 
 	    # Post code conversion.
 	    if ($var::REQUIRE_POST_CODECONV{$mtype}) {
+	        util::dprint("post_codeconv\n");
 		codeconv_document($contref);
 	    }
 
