--- a/scripts/mknmz.in
+++ b/scripts/mknmz.in
@@ -1,7 +1,7 @@
 #! %PERL% -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.in,v 1.30 2000-02-22 13:53:00 satoru Exp $
+# $Id: mknmz.in,v 1.31 2000-02-23 02:56:59 satoru Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
 # Copyright (C) 2000 Namazu Project All rights reserved.
@@ -1831,6 +1831,8 @@ sub make_headfoot ($$$) {
     $buf =~ s/(<!-- VERSION -->)(.*)(<!-- VERSION -->)/$1 v$var::VERSION $3/gs;
     $buf =~ s{(<!-- ADDRESS -->)(.*)(<!-- ADDRESS -->)}
 	     {$1\n<a href="mailto:$conf::ADDRESS">$conf::ADDRESS</a>\n$3}gs;
+    $buf =~ s{(<!-- LINK-REV-MADE -->)(.*)(<!-- LINK-REV-MADE -->)}
+	     {$1\n<link rev=made href="mailto:$conf::ADDRESS">\n$3}gs;
 
     print $fh_file $buf;
 }
